--- a/index.html
+++ b/index.html
@@ -12,10 +12,10 @@
 </head>
 <body>
     <div class="wrapper">
-        <h1> Creack Your BMI</h1>
-        <hr>
+        <h1 style="text-align: center;"> Creack Your BMI</h1>
+        
         <h5> Enter your weight and height below to check your BMI results</h5>
-        <hr>
+        
         <p>Put your Weight in here (KG)
             <input type="text" id="weight"><br><span id="weight_error"></span>
         </p>
