--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="wrapper">
         <h1 style="text-align: center;"> Creack Your BMI</h1>
         
-        <h5> Enter your weight and height below to check your BMI results</h5>
+        <h5 style="text-align: center;"> Enter your weight and height below to check your BMI results</h5>
         
         <p>Put your Weight in here (KG)
             <input type="text" id="weight"><br><span id="weight_error"></span>
